@@ -1,5 +1,7 @@
 Changes for 1.1.2:
 
+ - fixed graphs drawing (Eugene)
+ - fixed graph min value calculation (Eugene)
  - better pattern of distribution of item next checks to improve overall
  performance (Alexei)
  - fixed housekeeper, removal of historical and trend data (Alexei)
